[gd_scene load_steps=3 format=4 uid="uid://c6276oj5nbcx5"]

[ext_resource type="Script" uid="uid://bcfsa5i01f578" path="res://scenes/prefabs/map.gd" id="1_3ltby"]
[ext_resource type="TileSet" uid="uid://kljbw6ac41il" path="res://assets/WoodlandTilemap.tres" id="2_3uig2"]

[node name="Map" type="Node2D"]
script = ExtResource("1_3ltby")

[node name="FullRevealLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADz//r/AQAHAAAAAADz//v/AQAHAAAAAADz//z/AQAHAAAAAADz//3/AQAHAAAAAADz//7/AQAHAAAAAADz////AQAHAAAAAADz/wAAAQAHAAAAAADz/wEAAQAHAAAAAADz/wIAAQAHAAAAAADz/wMAAQAHAAAAAADz/wQAAQAHAAAAAADz/wUAAQAHAAAAAADz/wYAAQAHAAAAAAD0//r/AQAHAAAAAAD0//v/AQAGAAAAAAD0//z/AQAFAAAAAAD0//3/AQAGAAAAAAD0//7/AQAFAAAAAAD0////AQAGAAAAAAD0/wAAAQAFAAAAAAD0/wEAAQAGAAAAAAD0/wIAAQAFAAAAAAD0/wMAAQAGAAAAAAD0/wQAAQAFAAAAAAD0/wUAAQAGAAAAAAD0/wYAAQAHAAAAAAD1//r/AQAHAAAAAAD1//v/AQAFAAAAAAD1//z/AQAGAAAAAAD1//3/AQAFAAAAAAD1//7/AQAGAAAAAAD1////AQAFAAAAAAD1/wAAAQAGAAAAAAD1/wEAAQAFAAAAAAD1/wIAAQAGAAAAAAD1/wMAAQAFAAAAAAD1/wQAAQAGAAAAAAD1/wUAAQAFAAAAAAD1/wYAAQAHAAAAAAD2//r/AQAHAAAAAAD2//v/AQAGAAAAAAD2//z/AQAFAAAAAAD2//3/AQAGAAAAAAD2//7/AQAFAAAAAAD2////AQAGAAAAAAD2/wAAAQAFAAAAAAD2/wEAAQAGAAAAAAD2/wIAAQAFAAAAAAD2/wMAAQAGAAAAAAD2/wQAAQAFAAAAAAD2/wUAAQAGAAAAAAD2/wYAAQAHAAAAAAD3//r/AQAHAAAAAAD3//v/AQAFAAAAAAD3//z/AQAGAAAAAAD3//3/AQAFAAAAAAD3//7/AQAGAAAAAAD3////AQAFAAAAAAD3/wAAAQAGAAAAAAD3/wEAAQAFAAAAAAD3/wIAAQAGAAAAAAD3/wMAAQAFAAAAAAD3/wQAAQAGAAAAAAD3/wUAAQAFAAAAAAD3/wYAAQAHAAAAAAD4//r/AQAHAAAAAAD4//v/AQAGAAAAAAD4//z/AQAFAAAAAAD4//3/AQAGAAAAAAD4//7/AQAFAAAAAAD4////AQAGAAAAAAD4/wAAAQAFAAAAAAD4/wEAAQAGAAAAAAD4/wIAAQAFAAAAAAD4/wMAAQAGAAAAAAD4/wQAAQAFAAAAAAD4/wUAAQAGAAAAAAD4/wYAAQAHAAAAAAD5//r/AQAHAAAAAAD5//v/AQAFAAAAAAD5//z/AQAGAAAAAAD5//3/AQAFAAAAAAD5//7/AQAGAAAAAAD5////AQAFAAAAAAD5/wAAAQAGAAAAAAD5/wEAAQAFAAAAAAD5/wIAAQAGAAAAAAD5/wMAAQAFAAAAAAD5/wQAAQAGAAAAAAD5/wUAAQAFAAAAAAD5/wYAAQAHAAAAAAD6//r/AQAHAAAAAAD6//v/AQAGAAAAAAD6//z/AQAFAAAAAAD6//3/AQAGAAAAAAD6//7/AQAFAAAAAAD6////AQAGAAAAAAD6/wAAAQAFAAAAAAD6/wEAAQAGAAAAAAD6/wIAAQAFAAAAAAD6/wMAAQAGAAAAAAD6/wQAAQAFAAAAAAD6/wUAAQAGAAAAAAD6/wYAAQAHAAAAAAD7//r/AQAHAAAAAAD7//v/AQAFAAAAAAD7//z/AQAGAAAAAAD7//3/AQAFAAAAAAD7//7/AQAGAAAAAAD7////AQAFAAAAAAD7/wAAAQAGAAAAAAD7/wEAAQAFAAAAAAD7/wIAAQAGAAAAAAD7/wMAAQAFAAAAAAD7/wQAAQAGAAAAAAD7/wUAAQAFAAAAAAD7/wYAAQAHAAAAAAD8//r/AQAHAAAAAAD8//v/AQAGAAAAAAD8//z/AQAFAAAAAAD8//3/AQAGAAAAAAD8//7/AQAFAAAAAAD8////AQAGAAAAAAD8/wAAAQAFAAAAAAD8/wEAAQAGAAAAAAD8/wIAAQAFAAAAAAD8/wMAAQAGAAAAAAD8/wQAAQAFAAAAAAD8/wUAAQAGAAAAAAD8/wYAAQAHAAAAAAD9//r/AQAHAAAAAAD9//v/AQAFAAAAAAD9//z/AQAGAAAAAAD9//3/AQAFAAAAAAD9//7/AQAGAAAAAAD9////AQAFAAAAAAD9/wAAAQAGAAAAAAD9/wEAAQAFAAAAAAD9/wIAAQAGAAAAAAD9/wMAAQAFAAAAAAD9/wQAAQAGAAAAAAD9/wUAAQAFAAAAAAD9/wYAAQAHAAAAAAD+//r/AQAHAAAAAAD+//v/AQAGAAAAAAD+//z/AQAFAAAAAAD+//3/AQAGAAAAAAD+//7/AQAFAAAAAAD+////AQAGAAAAAAD+/wAAAQAFAAAAAAD+/wEAAQAGAAAAAAD+/wIAAQAFAAAAAAD+/wMAAQAGAAAAAAD+/wQAAQAFAAAAAAD+/wUAAQAGAAAAAAD+/wYAAQAHAAAAAAD///r/AQAHAAAAAAD///v/AQAFAAAAAAD///z/AQAGAAAAAAD///3/AQAFAAAAAAD///7/AQAGAAAAAAD/////AQAFAAAAAAD//wAAAQAGAAAAAAD//wEAAQAFAAAAAAD//wIAAQAGAAAAAAD//wMAAQAFAAAAAAD//wQAAQAGAAAAAAD//wUAAQAFAAAAAAD//wYAAQAHAAAAAAAAAPr/AQAHAAAAAAAAAPv/AQAGAAAAAAAAAPz/AQAFAAAAAAAAAP3/AQAGAAAAAAAAAP7/AQAFAAAAAAAAAP//AQAGAAAAAAAAAAAAAQAFAAAAAAAAAAEAAQAGAAAAAAAAAAIAAQAFAAAAAAAAAAMAAQAGAAAAAAAAAAQAAQAFAAAAAAAAAAUAAQAGAAAAAAAAAAYAAQAHAAAAAAABAPr/AQAHAAAAAAABAPv/AQAFAAAAAAABAPz/AQAGAAAAAAABAP3/AQAFAAAAAAABAP7/AQAGAAAAAAABAP//AQAFAAAAAAABAAAAAQAGAAAAAAABAAEAAQAFAAAAAAABAAIAAQAGAAAAAAABAAMAAQAFAAAAAAABAAQAAQAGAAAAAAABAAUAAQAFAAAAAAABAAYAAQAHAAAAAAACAPr/AQAHAAAAAAACAPv/AQAGAAAAAAACAPz/AQAFAAAAAAACAP3/AQAGAAAAAAACAP7/AQAFAAAAAAACAP//AQAGAAAAAAACAAAAAQAFAAAAAAACAAEAAQAGAAAAAAACAAIAAQAFAAAAAAACAAMAAQAGAAAAAAACAAQAAQAFAAAAAAACAAUAAQAGAAAAAAACAAYAAQAHAAAAAAADAPr/AQAHAAAAAAADAPv/AQAFAAAAAAADAPz/AQAGAAAAAAADAP3/AQAFAAAAAAADAP7/AQAGAAAAAAADAP//AQAFAAAAAAADAAAAAQAGAAAAAAADAAEAAQAFAAAAAAADAAIAAQAGAAAAAAADAAMAAQAFAAAAAAADAAQAAQAGAAAAAAADAAUAAQAFAAAAAAADAAYAAQAHAAAAAAAEAPr/AQAHAAAAAAAEAPv/AQAGAAAAAAAEAPz/AQAFAAAAAAAEAP3/AQAGAAAAAAAEAP7/AQAFAAAAAAAEAP//AQAGAAAAAAAEAAAAAQAFAAAAAAAEAAEAAQAGAAAAAAAEAAIAAQAFAAAAAAAEAAMAAQAGAAAAAAAEAAQAAQAFAAAAAAAEAAUAAQAGAAAAAAAEAAYAAQAHAAAAAAAFAPr/AQAHAAAAAAAFAPv/AQAFAAAAAAAFAPz/AQAGAAAAAAAFAP3/AQAFAAAAAAAFAP7/AQAGAAAAAAAFAP//AQAFAAAAAAAFAAAAAQAGAAAAAAAFAAEAAQAFAAAAAAAFAAIAAQAGAAAAAAAFAAMAAQAFAAAAAAAFAAQAAQAGAAAAAAAFAAUAAQAFAAAAAAAFAAYAAQAHAAAAAAAGAPr/AQAHAAAAAAAGAPv/AQAGAAAAAAAGAPz/AQAFAAAAAAAGAP3/AQAGAAAAAAAGAP7/AQAFAAAAAAAGAP//AQAGAAAAAAAGAAAAAQAFAAAAAAAGAAIAAQAFAAAAAAAGAAMAAQAGAAAAAAAGAAQAAQAFAAAAAAAGAAUAAQAGAAAAAAAGAAYAAQAHAAAAAAAHAPr/AQAHAAAAAAAHAPv/AQAFAAAAAAAHAPz/AQAGAAAAAAAHAP3/AQAFAAAAAAAHAP7/AQAGAAAAAAAHAP//AQAFAAAAAAAHAAAAAQAGAAAAAAAHAAEAAQAFAAAAAAAHAAIAAQAGAAAAAAAHAAMAAQAFAAAAAAAHAAQAAQAGAAAAAAAHAAUAAQAFAAAAAAAHAAYAAQAHAAAAAAAIAPr/AQAHAAAAAAAIAPv/AQAGAAAAAAAIAPz/AQAFAAAAAAAIAP3/AQAGAAAAAAAIAP7/AQAFAAAAAAAIAP//AQAGAAAAAAAIAAAAAQAFAAAAAAAIAAEAAQAGAAAAAAAIAAIAAQAFAAAAAAAIAAMAAQAGAAAAAAAIAAQAAQAFAAAAAAAIAAUAAQAGAAAAAAAIAAYAAQAHAAAAAAAJAPr/AQAHAAAAAAAJAPv/AQAFAAAAAAAJAPz/AQAGAAAAAAAJAP3/AQAFAAAAAAAJAP7/AQAGAAAAAAAJAP//AQAFAAAAAAAJAAAAAQAGAAAAAAAJAAEAAQAFAAAAAAAJAAIAAQAGAAAAAAAJAAMAAQAFAAAAAAAJAAQAAQAGAAAAAAAJAAUAAQAFAAAAAAAJAAYAAQAHAAAAAAAKAPr/AQAHAAAAAAAKAPv/AQAGAAAAAAAKAPz/AQAFAAAAAAAKAP3/AQAGAAAAAAAKAP7/AQAFAAAAAAAKAP//AQAGAAAAAAAKAAAAAQAFAAAAAAAKAAEAAQAGAAAAAAAKAAIAAQAFAAAAAAAKAAMAAQAGAAAAAAAKAAQAAQAFAAAAAAAKAAUAAQAGAAAAAAAKAAYAAQAHAAAAAAALAPr/AQAHAAAAAAALAPv/AQAFAAAAAAALAPz/AQAGAAAAAAALAP3/AQAFAAAAAAALAP7/AQAGAAAAAAALAP//AQAFAAAAAAALAAAAAQAGAAAAAAALAAEAAQAFAAAAAAALAAIAAQAGAAAAAAALAAMAAQAFAAAAAAALAAQAAQAGAAAAAAALAAUAAQAFAAAAAAALAAYAAQAHAAAAAAAMAPr/AQAHAAAAAAAMAPv/AQAGAAAAAAAMAPz/AQAFAAAAAAAMAP3/AQAGAAAAAAAMAP7/AQAFAAAAAAAMAP//AQAGAAAAAAAMAAAAAQAFAAAAAAAMAAEAAQAGAAAAAAAMAAIAAQAFAAAAAAAMAAMAAQAGAAAAAAAMAAQAAQAFAAAAAAAMAAUAAQAGAAAAAAAMAAYAAQAHAAAAAAANAPr/AQAHAAAAAAANAPv/AQAHAAAAAAANAPz/AQAHAAAAAAANAP3/AQAHAAAAAAANAP7/AQAHAAAAAAANAP//AQAHAAAAAAANAAAAAQAHAAAAAAANAAEAAQAHAAAAAAANAAIAAQAHAAAAAAANAAMAAQAHAAAAAAANAAQAAQAHAAAAAAANAAUAAQAHAAAAAAANAAYAAQAHAAAAAAAGAAEAAQAGAAAAAAA=")
tile_set = ExtResource("2_3uig2")

[node name="QuarterRevealLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADz//r/AwAHAAAAAADz//v/AwAHAAAAAADz//z/AwAHAAAAAADz//3/AwAHAAAAAADz//7/AwAHAAAAAADz////AwAHAAAAAADz/wAAAwAHAAAAAADz/wEAAwAHAAAAAADz/wIAAwAHAAAAAADz/wMAAwAHAAAAAADz/wQAAwAHAAAAAADz/wUAAwAHAAAAAADz/wYAAwAHAAAAAAD0//r/AwAHAAAAAAD0//v/AwAFAAAAAAD0//z/AwAGAAAAAAD0//3/AwAFAAAAAAD0//7/AwAGAAAAAAD0////AwAFAAAAAAD0/wAAAwAGAAAAAAD0/wEAAwAFAAAAAAD0/wIAAwAGAAAAAAD0/wMAAwAFAAAAAAD0/wQAAwAGAAAAAAD0/wUAAwAFAAAAAAD0/wYAAwAHAAAAAAD1//r/AwAHAAAAAAD1//v/AwAGAAAAAAD1//z/AwAFAAAAAAD1//3/AwAGAAAAAAD1//7/AwAFAAAAAAD1////AwAGAAAAAAD1/wAAAwAFAAAAAAD1/wEAAwAGAAAAAAD1/wIAAwAFAAAAAAD1/wMAAwAGAAAAAAD1/wQAAwAFAAAAAAD1/wUAAwAGAAAAAAD1/wYAAwAHAAAAAAD2//r/AwAHAAAAAAD2//v/AwAFAAAAAAD2//z/AwAGAAAAAAD2//3/AwAFAAAAAAD2//7/AwAGAAAAAAD2////AwAFAAAAAAD2/wAAAwAGAAAAAAD2/wEAAwAFAAAAAAD2/wIAAwAGAAAAAAD2/wMAAwAFAAAAAAD2/wQAAwAGAAAAAAD2/wUAAwAFAAAAAAD2/wYAAwAHAAAAAAD3//r/AwAHAAAAAAD3//v/AwAGAAAAAAD3//z/AwAFAAAAAAD3//3/AwAGAAAAAAD3//7/AwAFAAAAAAD3////AwAGAAAAAAD3/wAAAwAFAAAAAAD3/wEAAwAGAAAAAAD3/wIAAwAFAAAAAAD3/wMAAwAGAAAAAAD3/wQAAwAFAAAAAAD3/wUAAwAGAAAAAAD3/wYAAwAHAAAAAAD4//r/AwAHAAAAAAD4//v/AwAFAAAAAAD4//z/AwAGAAAAAAD4//3/AwAFAAAAAAD4//7/AwAGAAAAAAD4////AwAFAAAAAAD4/wAAAwAGAAAAAAD4/wEAAwAFAAAAAAD4/wIAAwAGAAAAAAD4/wMAAwAFAAAAAAD4/wQAAwAGAAAAAAD4/wUAAwAFAAAAAAD4/wYAAwAHAAAAAAD5//r/AwAHAAAAAAD5//v/AwAGAAAAAAD5//z/AwAFAAAAAAD5//3/AwAGAAAAAAD5//7/AwAFAAAAAAD5////AwAGAAAAAAD5/wAAAwAFAAAAAAD5/wEAAwAGAAAAAAD5/wIAAwAFAAAAAAD5/wMAAwAGAAAAAAD5/wQAAwAFAAAAAAD5/wUAAwAGAAAAAAD5/wYAAwAHAAAAAAD6//r/AwAHAAAAAAD6//v/AwAFAAAAAAD6//z/AwAGAAAAAAD6//3/AwAFAAAAAAD6//7/AwAGAAAAAAD6////AwAFAAAAAAD6/wAAAwAGAAAAAAD6/wEAAwAFAAAAAAD6/wIAAwAGAAAAAAD6/wMAAwAFAAAAAAD6/wQAAwAGAAAAAAD6/wUAAwAFAAAAAAD6/wYAAwAHAAAAAAD7//r/AwAHAAAAAAD7//v/AwAGAAAAAAD7//z/AwAFAAAAAAD7//3/AwAGAAAAAAD7//7/AwAFAAAAAAD7////AwAGAAAAAAD7/wAAAwAFAAAAAAD7/wEAAwAGAAAAAAD7/wIAAwAFAAAAAAD7/wMAAwAGAAAAAAD7/wQAAwAFAAAAAAD7/wUAAwAGAAAAAAD7/wYAAwAHAAAAAAD8//r/AwAHAAAAAAD8//v/AwAFAAAAAAD8//z/AwAGAAAAAAD8//3/AwAFAAAAAAD8//7/AwAGAAAAAAD8////AwAFAAAAAAD8/wAAAwAGAAAAAAD8/wEAAwAFAAAAAAD8/wIAAwAGAAAAAAD8/wMAAwAFAAAAAAD8/wQAAwAGAAAAAAD8/wUAAwAFAAAAAAD8/wYAAwAHAAAAAAD9//r/AwAHAAAAAAD9//v/AwAGAAAAAAD9//z/AwAFAAAAAAD9//3/AwAGAAAAAAD9//7/AwAFAAAAAAD9////AwAGAAAAAAD9/wAAAwAFAAAAAAD9/wEAAwAGAAAAAAD9/wIAAwAFAAAAAAD9/wMAAwAGAAAAAAD9/wQAAwAFAAAAAAD9/wUAAwAGAAAAAAD9/wYAAwAHAAAAAAD+//r/AwAHAAAAAAD+//v/AwAFAAAAAAD+//z/AwAGAAAAAAD+//3/AwAFAAAAAAD+//7/AwAGAAAAAAD+////AwAFAAAAAAD+/wAAAwAGAAAAAAD+/wEAAwAFAAAAAAD+/wIAAwAGAAAAAAD+/wMAAwAFAAAAAAD+/wQAAwAGAAAAAAD+/wUAAwAFAAAAAAD+/wYAAwAHAAAAAAD///r/AwAHAAAAAAD///v/AwAGAAAAAAD///z/AwAFAAAAAAD///3/AwAGAAAAAAD///7/AwAFAAAAAAD/////AwAGAAAAAAD//wAAAwAFAAAAAAD//wEAAwAGAAAAAAD//wIAAwAFAAAAAAD//wMAAwAGAAAAAAD//wQAAwAFAAAAAAD//wUAAwAGAAAAAAD//wYAAwAHAAAAAAAAAPr/AwAHAAAAAAAAAPv/AwAFAAAAAAAAAPz/AwAGAAAAAAAAAP3/AwAFAAAAAAAAAP7/AwAGAAAAAAAAAP//AwAFAAAAAAAAAAAAAwAGAAAAAAAAAAEAAwAFAAAAAAAAAAIAAwAGAAAAAAAAAAMAAwAFAAAAAAAAAAQAAwAGAAAAAAAAAAUAAwAFAAAAAAAAAAYAAwAHAAAAAAABAPr/AwAHAAAAAAABAPv/AwAGAAAAAAABAPz/AwAFAAAAAAABAP3/AwAGAAAAAAABAP7/AwAFAAAAAAABAP//AwAGAAAAAAABAAAAAwAFAAAAAAABAAEAAwAGAAAAAAABAAIAAwAFAAAAAAABAAMAAwAGAAAAAAABAAQAAwAFAAAAAAABAAUAAwAGAAAAAAABAAYAAwAHAAAAAAACAPr/AwAHAAAAAAACAPv/AwAFAAAAAAACAPz/AwAGAAAAAAACAP3/AwAFAAAAAAACAP7/AwAGAAAAAAACAP//AwAFAAAAAAACAAAAAwAGAAAAAAACAAEAAwAFAAAAAAACAAIAAwAGAAAAAAACAAMAAwAFAAAAAAACAAQAAwAGAAAAAAACAAUAAwAFAAAAAAACAAYAAwAHAAAAAAADAPr/AwAHAAAAAAADAPv/AwAGAAAAAAADAPz/AwAFAAAAAAADAP3/AwAGAAAAAAADAP7/AwAFAAAAAAADAP//AwAGAAAAAAADAAAAAwAFAAAAAAADAAEAAwAGAAAAAAADAAIAAwAFAAAAAAADAAMAAwAGAAAAAAADAAQAAwAFAAAAAAADAAUAAwAGAAAAAAADAAYAAwAHAAAAAAAEAPr/AwAHAAAAAAAEAPv/AwAFAAAAAAAEAPz/AwAGAAAAAAAEAP3/AwAFAAAAAAAEAP7/AwAGAAAAAAAEAP//AwAFAAAAAAAEAAAAAwAGAAAAAAAEAAEAAwAFAAAAAAAEAAIAAwAGAAAAAAAEAAMAAwAFAAAAAAAEAAQAAwAGAAAAAAAEAAUAAwAFAAAAAAAEAAYAAwAHAAAAAAAFAPr/AwAHAAAAAAAFAPv/AwAGAAAAAAAFAPz/AwAFAAAAAAAFAP3/AwAGAAAAAAAFAP7/AwAFAAAAAAAFAP//AwAGAAAAAAAFAAAAAwAFAAAAAAAFAAEAAwAGAAAAAAAFAAIAAwAFAAAAAAAFAAMAAwAGAAAAAAAFAAQAAwAFAAAAAAAFAAUAAwAGAAAAAAAFAAYAAwAHAAAAAAAGAPr/AwAHAAAAAAAGAPv/AwAFAAAAAAAGAPz/AwAGAAAAAAAGAP3/AwAFAAAAAAAGAP7/AwAGAAAAAAAGAP//AwAFAAAAAAAGAAAAAwAGAAAAAAAGAAEAAwAFAAAAAAAGAAIAAwAGAAAAAAAGAAMAAwAFAAAAAAAGAAQAAwAGAAAAAAAGAAUAAwAFAAAAAAAGAAYAAwAHAAAAAAAHAPr/AwAHAAAAAAAHAPv/AwAGAAAAAAAHAPz/AwAFAAAAAAAHAP3/AwAGAAAAAAAHAP7/AwAFAAAAAAAHAP//AwAGAAAAAAAHAAAAAwAFAAAAAAAHAAEAAwAGAAAAAAAHAAIAAwAFAAAAAAAHAAMAAwAGAAAAAAAHAAQAAwAFAAAAAAAHAAUAAwAGAAAAAAAHAAYAAwAHAAAAAAAIAPr/AwAHAAAAAAAIAPv/AwAFAAAAAAAIAPz/AwAGAAAAAAAIAP3/AwAFAAAAAAAIAP7/AwAGAAAAAAAIAP//AwAFAAAAAAAIAAAAAwAGAAAAAAAIAAEAAwAFAAAAAAAIAAIAAwAGAAAAAAAIAAMAAwAFAAAAAAAIAAQAAwAGAAAAAAAIAAUAAwAFAAAAAAAIAAYAAwAHAAAAAAAJAPr/AwAHAAAAAAAJAPv/AwAGAAAAAAAJAPz/AwAFAAAAAAAJAP3/AwAGAAAAAAAJAP7/AwAFAAAAAAAJAP//AwAGAAAAAAAJAAAAAwAFAAAAAAAJAAEAAwAGAAAAAAAJAAIAAwAFAAAAAAAJAAMAAwAGAAAAAAAJAAQAAwAFAAAAAAAJAAUAAwAGAAAAAAAJAAYAAwAHAAAAAAAKAPr/AwAHAAAAAAAKAPv/AwAFAAAAAAAKAPz/AwAGAAAAAAAKAP3/AwAFAAAAAAAKAP7/AwAGAAAAAAAKAP//AwAFAAAAAAAKAAAAAwAGAAAAAAAKAAEAAwAFAAAAAAAKAAIAAwAGAAAAAAAKAAMAAwAFAAAAAAAKAAQAAwAGAAAAAAAKAAUAAwAFAAAAAAAKAAYAAwAHAAAAAAALAPr/AwAHAAAAAAALAPv/AwAGAAAAAAALAPz/AwAFAAAAAAALAP3/AwAGAAAAAAALAP7/AwAFAAAAAAALAP//AwAGAAAAAAALAAAAAwAFAAAAAAALAAEAAwAGAAAAAAALAAIAAwAFAAAAAAALAAMAAwAGAAAAAAALAAQAAwAFAAAAAAALAAUAAwAGAAAAAAALAAYAAwAHAAAAAAAMAPr/AwAHAAAAAAAMAPv/AwAFAAAAAAAMAPz/AwAGAAAAAAAMAP3/AwAFAAAAAAAMAP7/AwAGAAAAAAAMAP//AwAFAAAAAAAMAAAAAwAGAAAAAAAMAAEAAwAFAAAAAAAMAAIAAwAGAAAAAAAMAAMAAwAFAAAAAAAMAAQAAwAGAAAAAAAMAAUAAwAFAAAAAAAMAAYAAwAHAAAAAAANAPr/AwAHAAAAAAANAPv/AwAHAAAAAAANAPz/AwAHAAAAAAANAP3/AwAHAAAAAAANAP7/AwAHAAAAAAANAP//AwAHAAAAAAANAAAAAwAHAAAAAAANAAEAAwAHAAAAAAANAAIAAwAHAAAAAAANAAMAAwAHAAAAAAANAAQAAwAHAAAAAAANAAUAAwAHAAAAAAANAAYAAwAHAAAAAAA=")
tile_set = ExtResource("2_3uig2")

[node name="HalfRevealLayer" type="TileMapLayer" parent="."]
z_index = 2
tile_map_data = PackedByteArray("AAD0//v/AAAGAAAAAAD1//z/AAAGAAAAAAD0//3/AAAGAAAAAAD2//v/AAAGAAAAAAD2//3/AAAGAAAAAAD3//z/AAAGAAAAAAD4//v/AAAGAAAAAAD5//z/AAAGAAAAAAD4//3/AAAGAAAAAAD6//v/AAAGAAAAAAD7//z/AAAGAAAAAAD6//3/AAAGAAAAAAD8//v/AAAGAAAAAAD9//z/AAAGAAAAAAD8//3/AAAGAAAAAAD7//7/AAAGAAAAAAD5//7/AAAGAAAAAAD0//z/AAAFAAAAAAD0//7/AAAFAAAAAAD0////AAAGAAAAAAD0/wAAAAAFAAAAAAD0/wEAAAAGAAAAAAD0/wIAAAAFAAAAAAD0/wMAAAAGAAAAAAD0/wQAAAAFAAAAAAD0/wUAAAAGAAAAAAD1//v/AAAFAAAAAAD1//3/AAAFAAAAAAD1//7/AAAGAAAAAAD1////AAAFAAAAAAD1/wAAAAAGAAAAAAD1/wEAAAAFAAAAAAD1/wIAAAAGAAAAAAD1/wMAAAAFAAAAAAD1/wQAAAAGAAAAAAD1/wUAAAAFAAAAAAD2//z/AAAFAAAAAAD2//7/AAAFAAAAAAD2////AAAGAAAAAAD2/wAAAAAFAAAAAAD2/wEAAAAGAAAAAAD2/wIAAAAFAAAAAAD2/wMAAAAGAAAAAAD2/wQAAAAFAAAAAAD2/wUAAAAGAAAAAAD3//v/AAAFAAAAAAD3//3/AAAFAAAAAAD3//7/AAAGAAAAAAD3////AAAFAAAAAAD3/wAAAAAGAAAAAAD3/wEAAAAFAAAAAAD3/wIAAAAGAAAAAAD3/wMAAAAFAAAAAAD3/wQAAAAGAAAAAAD3/wUAAAAFAAAAAAD4//z/AAAFAAAAAAD4//7/AAAFAAAAAAD4////AAAGAAAAAAD4/wAAAAAFAAAAAAD4/wEAAAAGAAAAAAD4/wIAAAAFAAAAAAD4/wMAAAAGAAAAAAD4/wQAAAAFAAAAAAD4/wUAAAAGAAAAAAD5//v/AAAFAAAAAAD5//3/AAAFAAAAAAD5////AAAFAAAAAAD5/wAAAAAGAAAAAAD5/wEAAAAFAAAAAAD5/wIAAAAGAAAAAAD5/wMAAAAFAAAAAAD5/wQAAAAGAAAAAAD5/wUAAAAFAAAAAAD6//z/AAAFAAAAAAD6//7/AAAFAAAAAAD6////AAAGAAAAAAD6/wAAAAAFAAAAAAD6/wEAAAAGAAAAAAD6/wIAAAAFAAAAAAD6/wMAAAAGAAAAAAD6/wQAAAAFAAAAAAD6/wUAAAAGAAAAAAD7//v/AAAFAAAAAAD7//3/AAAFAAAAAAD7////AAAFAAAAAAD7/wAAAAAGAAAAAAD7/wEAAAAFAAAAAAD7/wIAAAAGAAAAAAD7/wMAAAAFAAAAAAD7/wQAAAAGAAAAAAD7/wUAAAAFAAAAAAD8//z/AAAFAAAAAAD8//7/AAAFAAAAAAD8////AAAGAAAAAAD8/wAAAAAFAAAAAAD8/wEAAAAGAAAAAAD8/wIAAAAFAAAAAAD8/wMAAAAGAAAAAAD8/wQAAAAFAAAAAAD8/wUAAAAGAAAAAAD9//v/AAAFAAAAAAD9//3/AAAFAAAAAAD9//7/AAAGAAAAAAD9////AAAFAAAAAAD9/wAAAAAGAAAAAAD9/wEAAAAFAAAAAAD9/wIAAAAGAAAAAAD9/wMAAAAFAAAAAAD9/wQAAAAGAAAAAAD9/wUAAAAFAAAAAAD+//v/AAAGAAAAAAD+//z/AAAFAAAAAAD+//3/AAAGAAAAAAD+//7/AAAFAAAAAAD+////AAAGAAAAAAD+/wAAAAAFAAAAAAD+/wEAAAAGAAAAAAD+/wIAAAAFAAAAAAD+/wMAAAAGAAAAAAD+/wQAAAAFAAAAAAD+/wUAAAAGAAAAAAD///v/AAAFAAAAAAD///z/AAAGAAAAAAD///3/AAAFAAAAAAD///7/AAAGAAAAAAD/////AAAFAAAAAAD//wAAAAAGAAAAAAD//wEAAAAFAAAAAAD//wIAAAAGAAAAAAD//wMAAAAFAAAAAAD//wQAAAAGAAAAAAD//wUAAAAFAAAAAAAAAPv/AAAGAAAAAAAAAPz/AAAFAAAAAAAAAP3/AAAGAAAAAAAAAP7/AAAFAAAAAAAAAP//AAAGAAAAAAAAAAAAAAAFAAAAAAAAAAEAAAAGAAAAAAAAAAIAAAAFAAAAAAAAAAMAAAAGAAAAAAAAAAQAAAAFAAAAAAAAAAUAAAAGAAAAAAABAPv/AAAFAAAAAAABAPz/AAAGAAAAAAABAP3/AAAFAAAAAAABAP7/AAAGAAAAAAABAP//AAAFAAAAAAABAAAAAAAGAAAAAAABAAEAAAAFAAAAAAABAAIAAAAGAAAAAAABAAMAAAAFAAAAAAABAAQAAAAGAAAAAAABAAUAAAAFAAAAAAACAPv/AAAGAAAAAAACAPz/AAAFAAAAAAACAP3/AAAGAAAAAAACAP7/AAAFAAAAAAACAP//AAAGAAAAAAACAAAAAAAFAAAAAAACAAEAAAAGAAAAAAACAAIAAAAFAAAAAAACAAMAAAAGAAAAAAACAAQAAAAFAAAAAAACAAUAAAAGAAAAAAADAPv/AAAFAAAAAAADAPz/AAAGAAAAAAADAP3/AAAFAAAAAAADAP7/AAAGAAAAAAADAP//AAAFAAAAAAADAAAAAAAGAAAAAAADAAEAAAAFAAAAAAADAAIAAAAGAAAAAAADAAMAAAAFAAAAAAADAAQAAAAGAAAAAAADAAUAAAAFAAAAAAAEAPv/AAAGAAAAAAAEAPz/AAAFAAAAAAAEAP3/AAAGAAAAAAAEAP7/AAAFAAAAAAAEAP//AAAGAAAAAAAEAAAAAAAFAAAAAAAEAAEAAAAGAAAAAAAEAAIAAAAFAAAAAAAEAAMAAAAGAAAAAAAEAAQAAAAFAAAAAAAEAAUAAAAGAAAAAAAFAPv/AAAFAAAAAAAFAPz/AAAGAAAAAAAFAP3/AAAFAAAAAAAFAP7/AAAGAAAAAAAFAP//AAAFAAAAAAAFAAAAAAAGAAAAAAAFAAEAAAAFAAAAAAAFAAIAAAAGAAAAAAAFAAMAAAAFAAAAAAAFAAQAAAAGAAAAAAAFAAUAAAAFAAAAAAAGAPv/AAAGAAAAAAAGAPz/AAAFAAAAAAAGAP3/AAAGAAAAAAAGAP7/AAAFAAAAAAAGAP//AAAGAAAAAAAGAAAAAAAFAAAAAAAGAAEAAAAGAAAAAAAGAAIAAAAFAAAAAAAGAAMAAAAGAAAAAAAGAAQAAAAFAAAAAAAGAAUAAAAGAAAAAAAHAPv/AAAFAAAAAAAHAPz/AAAGAAAAAAAHAP3/AAAFAAAAAAAHAP7/AAAGAAAAAAAHAP//AAAFAAAAAAAHAAAAAAAGAAAAAAAHAAEAAAAFAAAAAAAHAAIAAAAGAAAAAAAHAAMAAAAFAAAAAAAHAAQAAAAGAAAAAAAHAAUAAAAFAAAAAAAIAPv/AAAGAAAAAAAIAPz/AAAFAAAAAAAIAP3/AAAGAAAAAAAIAP7/AAAFAAAAAAAIAP//AAAGAAAAAAAIAAAAAAAFAAAAAAAIAAEAAAAGAAAAAAAIAAIAAAAFAAAAAAAIAAMAAAAGAAAAAAAIAAQAAAAFAAAAAAAIAAUAAAAGAAAAAAAJAPv/AAAFAAAAAAAJAPz/AAAGAAAAAAAJAP3/AAAFAAAAAAAJAP7/AAAGAAAAAAAJAP//AAAFAAAAAAAJAAAAAAAGAAAAAAAJAAEAAAAFAAAAAAAJAAIAAAAGAAAAAAAJAAMAAAAFAAAAAAAJAAQAAAAGAAAAAAAJAAUAAAAFAAAAAAAKAPv/AAAGAAAAAAAKAPz/AAAFAAAAAAAKAP3/AAAGAAAAAAAKAP7/AAAFAAAAAAAKAP//AAAGAAAAAAAKAAAAAAAFAAAAAAAKAAEAAAAGAAAAAAAKAAIAAAAFAAAAAAAKAAMAAAAGAAAAAAAKAAQAAAAFAAAAAAAKAAUAAAAGAAAAAAALAPv/AAAFAAAAAAALAPz/AAAGAAAAAAALAP3/AAAFAAAAAAALAP7/AAAGAAAAAAALAP//AAAFAAAAAAALAAAAAAAGAAAAAAALAAEAAAAFAAAAAAALAAIAAAAGAAAAAAALAAMAAAAFAAAAAAALAAUAAAAFAAAAAAAMAPv/AAAGAAAAAAAMAPz/AAAFAAAAAAAMAP3/AAAGAAAAAAAMAP7/AAAFAAAAAAAMAP//AAAGAAAAAAAMAAAAAAAFAAAAAAAMAAEAAAAGAAAAAAAMAAIAAAAFAAAAAAAMAAMAAAAGAAAAAAAMAAQAAAAFAAAAAAAMAAUAAAAGAAAAAAALAAQAAAAGAAAAAADz//r/AAAHAAAAAADz//v/AAAHAAAAAADz//z/AAAHAAAAAADz//3/AAAHAAAAAADz//7/AAAHAAAAAADz////AAAHAAAAAADz/wAAAAAHAAAAAADz/wEAAAAHAAAAAADz/wIAAAAHAAAAAADz/wMAAAAHAAAAAADz/wQAAAAHAAAAAADz/wUAAAAHAAAAAADz/wYAAAAHAAAAAAD0/wYAAAAHAAAAAAD1/wYAAAAHAAAAAAD2/wYAAAAHAAAAAAD3/wYAAAAHAAAAAAD4/wYAAAAHAAAAAAD5/wYAAAAHAAAAAAD6/wYAAAAHAAAAAAD7/wYAAAAHAAAAAAD8/wYAAAAHAAAAAAD9/wYAAAAHAAAAAAD+/wYAAAAHAAAAAAD//wYAAAAHAAAAAAAAAAYAAAAHAAAAAAABAAYAAAAHAAAAAAACAAYAAAAHAAAAAAADAAYAAAAHAAAAAAAEAAYAAAAHAAAAAAAFAAYAAAAHAAAAAAAGAAYAAAAHAAAAAAAHAAYAAAAHAAAAAAAIAAYAAAAHAAAAAAAJAAYAAAAHAAAAAAAKAAYAAAAHAAAAAAALAAYAAAAHAAAAAAAMAAYAAAAHAAAAAAANAAYAAAAHAAAAAAANAPr/AAAHAAAAAAANAPv/AAAHAAAAAAANAPz/AAAHAAAAAAANAP3/AAAHAAAAAAANAP7/AAAHAAAAAAANAP//AAAHAAAAAAANAAAAAAAHAAAAAAANAAEAAAAHAAAAAAANAAIAAAAHAAAAAAANAAMAAAAHAAAAAAANAAQAAAAHAAAAAAANAAUAAAAHAAAAAAAMAPr/AAAHAAAAAAALAPr/AAAHAAAAAAAKAPr/AAAHAAAAAAAJAPr/AAAHAAAAAAAIAPr/AAAHAAAAAAAHAPr/AAAHAAAAAAAGAPr/AAAHAAAAAAAFAPr/AAAHAAAAAAAEAPr/AAAHAAAAAAADAPr/AAAHAAAAAAACAPr/AAAHAAAAAAABAPr/AAAHAAAAAAAAAPr/AAAHAAAAAAD///r/AAAHAAAAAAD+//r/AAAHAAAAAAD9//r/AAAHAAAAAAD8//r/AAAHAAAAAAD7//r/AAAHAAAAAAD6//r/AAAHAAAAAAD5//r/AAAHAAAAAAD4//r/AAAHAAAAAAD3//r/AAAHAAAAAAD2//r/AAAHAAAAAAD1//r/AAAHAAAAAAD0//r/AAAHAAAAAAA=")
tile_set = ExtResource("2_3uig2")

[node name="FogLayer" type="TileMapLayer" parent="."]
z_index = 3
tile_map_data = PackedByteArray("AADz//r/BAAHAAEAAADz//v/BAAHAAEAAADz//z/BAAHAAEAAADz//3/BAAHAAEAAADz//7/BAAHAAEAAADz////BAAHAAEAAADz/wAABAAHAAEAAADz/wEABAAHAAEAAADz/wIABAAHAAEAAADz/wMABAAHAAEAAADz/wQABAAHAAEAAADz/wUABAAHAAEAAADz/wYABAAHAAEAAAD0//r/BAAHAAEAAAD0//v/BAAHAAEAAAD0//z/BAAHAAEAAAD0//3/BAAHAAEAAAD0//7/BAAHAAEAAAD0////BAAHAAEAAAD0/wAABAAHAAEAAAD0/wEABAAHAAEAAAD0/wIABAAHAAEAAAD0/wMABAAHAAEAAAD0/wQABAAHAAEAAAD0/wUABAAHAAEAAAD0/wYABAAHAAEAAAD1//r/BAAHAAEAAAD1//v/BAAHAAEAAAD1//z/BAAHAAEAAAD1//3/BAAHAAEAAAD1//7/BAAHAAEAAAD1////BAAHAAEAAAD1/wAABAAHAAEAAAD1/wEABAAHAAEAAAD1/wIABAAHAAEAAAD1/wMABAAHAAEAAAD1/wQABAAHAAEAAAD1/wUABAAHAAEAAAD1/wYABAAHAAEAAAD2//r/BAAHAAEAAAD2//v/BAAHAAEAAAD2//z/BAAHAAEAAAD2//3/BAAHAAEAAAD2//7/BAAHAAEAAAD2////BAAHAAEAAAD2/wAABAAHAAEAAAD2/wEABAAHAAEAAAD2/wIABAAHAAEAAAD2/wMABAAHAAEAAAD2/wQABAAHAAEAAAD2/wUABAAHAAEAAAD2/wYABAAHAAEAAAD3//r/BAAHAAEAAAD3//v/BAAHAAEAAAD3//z/BAAHAAEAAAD3/wMABAAHAAEAAAD3/wQABAAHAAEAAAD3/wUABAAHAAEAAAD3/wYABAAHAAEAAAD4//r/BAAHAAEAAAD4//v/BAAHAAEAAAD4//z/BAAHAAEAAAD4//3/BAAHAAEAAAD4//7/BAAHAAEAAAD4////BAAHAAEAAAD4/wAABAAHAAEAAAD4/wEABAAHAAEAAAD4/wQABAAHAAEAAAD4/wUABAAHAAEAAAD4/wYABAAHAAEAAAD5//r/BAAHAAEAAAD5//v/BAAHAAEAAAD5//z/BAAHAAEAAAD5//3/BAAHAAEAAAD5//7/BAAHAAEAAAD5////BAAHAAEAAAD5/wAABAAHAAEAAAD5/wEABAAHAAEAAAD5/wQABAAHAAEAAAD5/wUABAAHAAEAAAD5/wYABAAHAAEAAAD6//r/BAAHAAEAAAD6//v/BAAHAAEAAAD6//z/BAAHAAEAAAD6//3/BAAHAAEAAAD6//7/BAAHAAEAAAD6////BAAHAAEAAAD6/wAABAAHAAEAAAD6/wEABAAHAAEAAAD6/wMABAAHAAEAAAD6/wQABAAHAAEAAAD6/wUABAAHAAEAAAD6/wYABAAHAAEAAAD7//r/BAAHAAEAAAD7//v/BAAHAAEAAAD7//z/BAAHAAEAAAD7//3/BAAHAAEAAAD7//7/BAAHAAEAAAD7////BAAHAAEAAAD7/wAABAAHAAEAAAD7/wEABAAHAAEAAAD7/wMABAAHAAEAAAD7/wQABAAHAAEAAAD7/wUABAAHAAEAAAD7/wYABAAHAAEAAAD8//r/BAAHAAEAAAD8//v/BAAHAAEAAAD8//z/BAAHAAEAAAD8//3/BAAHAAEAAAD8//7/BAAHAAEAAAD8////BAAHAAEAAAD8/wAABAAHAAEAAAD8/wEABAAHAAEAAAD9//r/BAAHAAEAAAD9//v/BAAHAAEAAAD9//z/BAAHAAEAAAD9//3/BAAHAAEAAAD9//7/BAAHAAEAAAD9////BAAHAAEAAAD9/wAABAAHAAEAAAD9/wEABAAHAAEAAAD9/wUABAAHAAEAAAD9/wYABAAHAAEAAAD+//r/BAAHAAEAAAD+//v/BAAHAAEAAAD+//z/BAAHAAEAAAD+//3/BAAHAAEAAAD+//7/BAAHAAEAAAD+////BAAHAAEAAAD+/wAABAAHAAEAAAD+/wUABAAHAAEAAAD+/wYABAAHAAEAAAD///r/BAAHAAEAAAD///v/BAAHAAEAAAD///z/BAAHAAEAAAD///3/BAAHAAEAAAD///7/BAAHAAEAAAD/////BAAHAAEAAAD//wAABAAHAAEAAAD//wUABAAHAAEAAAD//wYABAAHAAEAAAAAAPr/BAAHAAEAAAAAAPv/BAAHAAEAAAAAAPz/BAAHAAEAAAAAAP3/BAAHAAEAAAAAAP7/BAAHAAEAAAAAAP//BAAHAAEAAAAAAAAABAAHAAEAAAAAAAMABAAHAAEAAAAAAAUABAAHAAEAAAAAAAYABAAHAAEAAAABAPr/BAAHAAEAAAABAPv/BAAHAAEAAAABAPz/BAAHAAEAAAABAP3/BAAHAAEAAAABAP7/BAAHAAEAAAABAP//BAAHAAEAAAABAAAABAAHAAEAAAABAAMABAAHAAEAAAABAAUABAAHAAEAAAABAAYABAAHAAEAAAACAPr/BAAHAAEAAAACAPv/BAAHAAEAAAACAPz/BAAHAAEAAAACAP3/BAAHAAEAAAACAP7/BAAHAAEAAAACAP//BAAHAAEAAAACAAAABAAHAAEAAAACAAMABAAHAAEAAAACAAUABAAHAAEAAAACAAYABAAHAAEAAAADAPr/BAAHAAEAAAADAPv/BAAHAAEAAAADAPz/BAAHAAEAAAADAP3/BAAHAAEAAAADAP7/BAAHAAEAAAADAP//BAAHAAEAAAADAAAABAAHAAEAAAADAAEABAAHAAEAAAADAAMABAAHAAEAAAADAAYABAAHAAEAAAAEAPr/BAAHAAEAAAAEAPv/BAAHAAEAAAAEAPz/BAAHAAEAAAAEAP3/BAAHAAEAAAAEAP7/BAAHAAEAAAAEAP//BAAHAAEAAAAEAAAABAAHAAEAAAAEAAEABAAHAAEAAAAEAAMABAAHAAEAAAAEAAYABAAHAAEAAAAFAPr/BAAHAAEAAAAFAPv/BAAHAAEAAAAFAPz/BAAHAAEAAAAFAP3/BAAHAAEAAAAFAAMABAAHAAEAAAAFAAYABAAHAAEAAAAGAPr/BAAHAAEAAAAGAPv/BAAHAAEAAAAGAPz/BAAHAAEAAAAGAP3/BAAHAAEAAAAGAP7/BAAHAAEAAAAGAP//BAAHAAEAAAAGAAAABAAHAAEAAAAGAAEABAAHAAEAAAAGAAIABAAHAAEAAAAGAAMABAAHAAEAAAAGAAYABAAHAAEAAAAHAPr/BAAHAAEAAAAHAPv/BAAHAAEAAAAHAPz/BAAHAAEAAAAHAP3/BAAHAAEAAAAHAP7/BAAHAAEAAAAHAP//BAAHAAEAAAAHAAAABAAHAAEAAAAHAAEABAAHAAEAAAAHAAIABAAHAAEAAAAHAAMABAAHAAEAAAAHAAUABAAHAAEAAAAIAPr/BAAHAAEAAAAIAPv/BAAHAAEAAAAIAPz/BAAHAAEAAAAIAP3/BAAHAAEAAAAIAP7/BAAHAAEAAAAIAP//BAAHAAEAAAAIAAAABAAHAAEAAAAIAAEABAAHAAEAAAAIAAIABAAHAAEAAAAIAAMABAAHAAEAAAAIAAUABAAHAAEAAAAJAPr/BAAHAAEAAAAJAPv/BAAHAAEAAAAJAPz/BAAHAAEAAAAJAP3/BAAHAAEAAAAJAP7/BAAHAAEAAAAJAP//BAAHAAEAAAAJAAAABAAHAAEAAAAJAAEABAAHAAEAAAAJAAIABAAHAAEAAAAJAAMABAAHAAEAAAAKAPr/BAAHAAEAAAAKAPv/BAAHAAEAAAAKAPz/BAAHAAEAAAAKAP3/BAAHAAEAAAAKAP7/BAAHAAEAAAAKAP//BAAHAAEAAAAKAAAABAAHAAEAAAAKAAEABAAHAAEAAAAKAAIABAAHAAEAAAAKAAMABAAHAAEAAAAKAAQABAAHAAEAAAALAPr/BAAHAAEAAAALAPv/BAAHAAEAAAALAPz/BAAHAAEAAAALAP3/BAAHAAEAAAALAP7/BAAHAAEAAAALAP//BAAHAAEAAAALAAAABAAHAAEAAAALAAEABAAHAAEAAAALAAIABAAHAAEAAAALAAMABAAHAAEAAAALAAQABAAHAAEAAAALAAYABAAHAAEAAAAMAPr/BAAHAAEAAAAMAPv/BAAHAAEAAAAMAPz/BAAHAAEAAAAMAP3/BAAHAAEAAAAMAP7/BAAHAAEAAAAMAP//BAAHAAEAAAAMAAAABAAHAAEAAAAMAAEABAAHAAEAAAAMAAIABAAHAAEAAAAMAAMABAAHAAEAAAAMAAQABAAHAAEAAAAMAAYABAAHAAEAAAANAPr/BAAHAAEAAAANAPv/BAAHAAEAAAANAPz/BAAHAAEAAAANAP3/BAAHAAEAAAANAP7/BAAHAAEAAAANAP//BAAHAAEAAAANAAAABAAHAAEAAAANAAEABAAHAAEAAAANAAIABAAHAAEAAAANAAMABAAHAAEAAAANAAQABAAHAAEAAAANAAUABAAHAAEAAAD8/wMABAAHAAEAAAD8/wQABAAHAAEAAAD8/wUABAAHAAEAAAD8/wYABAAHAAEAAAD5/wMABAAHAAEAAAD4/wMABAAHAAEAAAD+/wEABAAHAAEAAAD//wEABAAHAAEAAAAAAAEABAAHAAEAAAABAAEABAAHAAEAAAACAAEABAAHAAEAAAD//wMABAAHAAEAAAD+/wMABAAHAAEAAAD9/wMABAAHAAEAAAD9/wQABAAHAAEAAAD+/wQABAAHAAEAAAD//wQABAAHAAEAAAAAAAQABAAHAAEAAAABAAQABAAHAAEAAAACAAQABAAHAAEAAAADAAQABAAHAAEAAAAEAAQABAAHAAEAAAAFAAQABAAHAAEAAAAGAAQABAAHAAEAAAAHAAQABAAHAAEAAAAIAAQABAAHAAEAAAAJAAQABAAHAAEAAAAJAAUABAAHAAEAAAAKAAUABAAHAAEAAAALAAUABAAHAAEAAAAMAAUABAAHAAEAAAANAAYABAAHAAEAAAAKAAYABAAHAAEAAAAJAAYABAAHAAEAAAAIAAYABAAHAAEAAAAHAAYABAAHAAEAAAAGAAUABAAHAAEAAAAFAAUABAAHAAEAAAAEAAUABAAHAAEAAAADAAUABAAHAAEAAAAFAP7/BAAHAAEAAAAFAP//BAAHAAEAAAAFAAAABAAHAAEAAAAFAAEABAAHAAEAAAAFAAIABAAHAAEAAAAEAAIABAAHAAEAAAADAAIABAAHAAEAAAACAAIABAAHAAEAAAABAAIABAAHAAEAAAAAAAIABAAHAAEAAAD//wIABAAHAAEAAAD+/wIABAAHAAEAAAD9/wIABAAHAAEAAAD8/wIABAAHAAEAAAD7/wIABAAHAAEAAAD6/wIABAAHAAEAAAD5/wIABAAHAAEAAAD4/wIABAAHAAEAAAD3/wIABAAHAAEAAAD3/wEABAAHAAEAAAD3/wAABAAHAAEAAAD3////BAAHAAEAAAD3//7/BAAHAAEAAAD3//3/BAAHAAEAAAA=")
tile_set = ExtResource("2_3uig2")
